# HIRE

program/: CMakeLists.txt
program/src/: main.cpp
